# rustymicrobit-moxi

./: .bacon-locations  .rustfmt.toml  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
src/: ble.rs  buttons.rs  dashboard.rs  display.rs  lib.rs  main.rs  measurement.rs  power.rs  sense_co2.rs  sense_hpa.rs  sense_i2c.rs  sense_mb.rs  sense_pa.rs
src/ble/: services.rs
src/ble/services/: battery.rs  configuration.rs  environment.rs  motion.rs  sound.rs  ui.rs
tests/: dashboard.rs  device.rs  measurement.rs  power.rs  sense_mb.rs
