[package]
name = "rustymicrobit-moxi"
version = "0.1.0"
edition = "2024"

[dependencies]
bmp5 = { version = "0.2.2", features = ["defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "defmt",
  "executor-thread",
] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
libscd = { version = "0.5.1", features = ["async", "scd4x", "defmt"] }
microbit-bsp = "0.4.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"

[patch.crates-io]
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp.git", rev = "19d555bfbbcfa39db6aac467673386662c39e299" }

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "206a324cf4d612122356fb350b4a3b56391d6f20" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "206a324cf4d612122356fb350b4a3b56391d6f20" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "206a324cf4d612122356fb350b4a3b56391d6f20" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "206a324cf4d612122356fb350b4a3b56391d6f20" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "206a324cf4d612122356fb350b4a3b56391d6f20" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "206a324cf4d612122356fb350b4a3b56391d6f20" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "206a324cf4d612122356fb350b4a3b56391d6f20" }
