[package]
name = "rustymicrobit-moxi"
version = "0.3.0"
edition = "2024"

[dependencies]
bmp5 = { version = "0.2", features = ["defmt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = "1"
embassy-embedded-hal = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.10", features = [
  "platform-cortex-m",
  "defmt",
  "executor-thread",
] }
embassy-futures = { version = "0.1", features = ["defmt"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-time = { version = "0.5", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
heapless = { version = "0.9", features = ["defmt"] }
libm = "0.2"
libscd = { version = "0.5", features = ["async", "scd4x", "defmt"] }
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp.git", rev = "c8bc66802d694d306ea02911483e89a44c939147" }
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2.1"
